--- a/angular.json
+++ b/angular.json
@@ -25,9 +25,10 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css"
+              "src/styles.css",
+              "src/fancy-styles.scss"
             ],
-            "scripts": []
+            "scripts": ["src/script.js"]
           },
           "configurations": {
             "production": {
